# job-application-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
app/: README.md
config/: runtime.example.yaml
data/: README.md
docs/: agent_verification.md  application_prep_rules.md  architecture.md  archive_job_rules.md  batch_handoff.md  cli_notes.md  codex_setup.md  daily_job_scan_rules.md  data_model.md  deployment_handoff.md  github_free_plan.md  google_sheets_staging_adapter.md  human_in_the_loop_policy.md  local_sync_checks.md  local_sync_workflow.md  mock_cli_command_map.md  mock_cli_expected_outputs.md  mock_cli_filter_examples.md  mock_cli_quickstart.md  mock_cli_review_order.md  mock_demo_review_checklist.md  mock_fixture_authoring.md  phase_three_staging_plan.md  phase_two_bulk_review_checklist.md  phase_two_completion.md  phase_two_documentation_index.md  phase_two_mock_dashboard.md  phase_two_mock_package_plan.md  phase_two_mock_queue.md  phase_two_next_work.md  portfolio_configuration.md  private_runtime_setup.md  product_spec.md  public_template_configuration.md  real_data_boundary.md  review_workflows.md  roadmap.md  scheduled_task_rules.md  scoring.md  security_model.md  (+2 more)
examples/: mock_jobs.json  mock_resume_profile.json
prompts/: README.md
scripts/: check-local.sh  sync-local.sh
tests/: README.md  test_cli.py  test_config.py  test_domain.py  test_mock_dashboard.py  test_mock_dashboard_report.py  test_mock_jobs.py  (+12 more)
(+20 files in other folders)
